force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Stores the payment details that a participant need to make as part of post settlement process</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PID-{00000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>