force-app/main/default/objects/Payment__c/fields/BasePortalURL__c.field-meta.xml
<CustomField>
    <fullName>BasePortalURL__c</fullName>
    <formula>$Setup.BaseURL__c.Portal_Base_URL__c</formula>
    <label>BasePortalURL</label>
    <type>Text</type>
</CustomField>