force-app/main/default/objects/Payment__c/fields/Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>Biller_Code__c</fullName>
    <description>BPAY Biller Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Biller Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>