force-app/main/default/objects/Payment__c/fields/Book_Value_of_Equity_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Book_Value_of_Equity_Buyback__c</fullName>
    <formula>Property__r.Property_Purchase_Price__c * (Amount_Received__c / Case__r.Property_Market_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Value of Equity Buyback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>