force-app/main/default/objects/Payment__c/fields/ByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassValidation</label>
    <type>Checkbox</type>
</CustomField>