force-app/main/default/objects/Payment__c/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <description>Updated by SRO Officer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Comments</label>
    <type>TextArea</type>
</CustomField>