force-app/main/default/objects/Payment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Comments</label>
    <type>TextArea</type>
</CustomField>