force-app/main/default/objects/Payment__c/fields/DemandID__c.field-meta.xml
<CustomField>
    <fullName>DemandID__c</fullName>
    <description>Added to the payment record when the payment is registered. Supplied by SV and shown in tax invoice as the Service Victoria Reference Number.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Demand ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>