force-app/main/default/objects/Payment__c/fields/Expiry_Date_With_5_Day_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_With_5_Day_Buffer__c</fullName>
    <description>Used for field merge within email templates</description>
    <formula>Expiry_Date__c -5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date With 5 Day Buffer</label>
    <type>Date</type>
</CustomField>