force-app/main/default/objects/Payment__c/fields/Flag_Current_Payment_Regenerated_Record__c.field-meta.xml
<CustomField>
    <fullName>Flag_Current_Payment_Regenerated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please do not use this field for reporting purpose. Only for backend logic purpose</description>
    <label>Flag_Current_Payment_Regenerated_Record</label>
    <type>Checkbox</type>
</CustomField>