force-app/main/default/objects/Payment__c/fields/Fourth_Participant__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Fourth Participant)</relationshipLabel>
    <relationshipName>Payments4</relationshipName>
    <type>Lookup</type>
</CustomField>