force-app/main/default/objects/Payment__c/fields/GatewayRefN__c.field-meta.xml
<CustomField>
    <fullName>GatewayRefN__c</fullName>
    <description>Payment reference number from the payment gateway</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gateway Ref Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>