force-app/main/default/objects/Payment__c/fields/GatewayResultCode__c.field-meta.xml
<CustomField>
    <fullName>GatewayResultCode__c</fullName>
    <description>Resulting transaction or error code returned by the payment gateway after the request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gateway Result Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>