force-app/main/default/objects/Payment__c/fields/GatewayResultCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>GatewayResultCodeDescription__c</fullName>
    <description>Description of the Gateway&apos;s result code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gateway Result Code Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>