force-app/main/default/objects/Payment__c/fields/iCRN__c.field-meta.xml
<CustomField>
    <fullName>iCRN__c</fullName>
    <description>BPAY&apos;s (intelligent) Customer Reference Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>iCRN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>