force-app/main/default/objects/Payment__c/fields/Letter_of_Partial_Payment_To_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Partial_Payment_To_Applicants__c</fullName>
    <description>##Conga created button:00b5P000000b1XX</description>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[Property]a0E5P000000dTpgUAE&quot; + 
&quot;&amp;templateid=[Confirmation+of+Partial+Payment]a0M5P000001UZojUAG&quot;+
&quot;&amp;DS7=12&quot;+
&quot;&amp;EmailRelatedToId=&quot;+Id+
&quot;&amp;EmailToID=&quot;+ Primary_Participant_Contact__c +
&quot;&amp;EmailTemplateId=00X5P000000c2YSUAY&quot;+
&quot;&amp;EmailAdditionalTo=&quot;+Second_Participant__r.PersonEmail+&quot;,&quot;+Third_Participant__r.PersonEmail+&quot;,&quot;+Fourth_Participant__r.PersonEmail+
&quot;&amp;qmode=SendEmail&quot;+
&quot;&amp;SC0=1&amp;SC1=SalesforceFile&amp;apdf=0&amp;FP0=1&quot;+
&quot;&amp;EmailFromID=0D22P00000000qW&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter of Partial Payment To Applicants</label>
    <type>Text</type>
</CustomField>