force-app/main/default/objects/Payment__c/fields/Panel_Financier_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Financier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Panel Financier Name)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>