force-app/main/default/objects/Payment__c/fields/Parent_Payment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-linked</description>
    <label>Parent Payment ID</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>