force-app/main/default/objects/Payment__c/fields/Participant_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Request Expired</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>