force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Auto-populated on payment receipt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>