force-app/main/default/objects/Payment__c/fields/Payment_Regenerated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Regenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Regenerated</label>
    <type>Checkbox</type>
</CustomField>