force-app/main/default/objects/Payment__c/fields/Payout_Document__c.field-meta.xml
<CustomField>
    <fullName>Payout_Document__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Property]a0E5P000000dTpgUAE&quot; +
&quot;&amp;templateid=[Payout+Detail]a0M5P000001a0YMUAY&quot; +
&quot;&amp;qmode=SalesforceFile&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;apdf=0&quot; +
&quot;&amp;fp0=1&quot;</formula>
    <label>Payout Document</label>
    <type>Text</type>
</CustomField>