force-app/main/default/objects/Payment__c/fields/Payout_Payment_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Payment_Requested_Date__c</fullName>
    <formula>Requested_Date__c + 60</formula>
    <label>Payout Payment Requested Date</label>
    <type>Date</type>
</CustomField>