force-app/main/default/objects/Payment__c/fields/Previous_Shared_Equity_Interest__c.field-meta.xml
<CustomField>
    <fullName>Previous_Shared_Equity_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Shared Equity Interest</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>