force-app/main/default/objects/Payment__c/fields/Primary_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Auto-linked when payment record is created</description>
    <label>Primary Participant Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>