force-app/main/default/objects/Payment__c/fields/Primary_Participant_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant_Address__c</fullName>
    <formula>Primary_Participant__r.PersonContact.MailingStreet &amp;  IF( ISBLANK(Primary_Participant__r.PersonContact.MailingStreet) , &quot;&quot;, &quot;, &quot;) &amp;
Primary_Participant__r.PersonContact.MailingCity &amp; IF( ISBLANK(Primary_Participant__r.PersonContact.MailingCity) , &quot;&quot;, &quot;, &quot;) &amp;
Primary_Participant__r.PersonContact.MailingState &amp; IF( ISBLANK(Primary_Participant__r.PersonContact.MailingState) , &quot;&quot;, &quot;, &quot;) &amp;
Primary_Participant__r.PersonContact.MailingPostalCode</formula>
    <label>Primary Participant Address</label>
    <type>Text</type>
</CustomField>