force-app/main/default/objects/Payment__c/fields/Primary_Participant_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant_FirstName__c</fullName>
    <formula>Primary_Participant__r.FirstName</formula>
    <label>Primary Participant FirstName</label>
    <type>Text</type>
</CustomField>