force-app/main/default/objects/Payment__c/fields/Primary_Participant_LastName__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant_LastName__c</fullName>
    <formula>Primary_Participant__r.LastName</formula>
    <label>Primary Participant LastName</label>
    <type>Text</type>
</CustomField>