force-app/main/default/objects/Payment__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Auto-linked when payment record is created</description>
    <label>Property</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>