force-app/main/default/objects/Payment__c/fields/Real_Gain_on_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Real_Gain_on_Buyback__c</fullName>
    <formula>Amount_Received__c - Book_Value_of_Equity_Buyback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Gain on Buyback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>