force-app/main/default/objects/Payment__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Auto-populated when status is updated to payment requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>