force-app/main/default/objects/Payment__c/fields/Second_Participant__c.field-meta.xml
<CustomField>
    <fullName>Second_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Second Participant)</relationshipLabel>
    <relationshipName>Payments2</relationshipName>
    <type>Lookup</type>
</CustomField>