force-app/main/default/objects/Payment__c/fields/Shared_Equity_Interest__c.field-meta.xml
<CustomField>
    <fullName>Shared_Equity_Interest__c</fullName>
    <formula>Property__r.Shared_Equity_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared Equity Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>