force-app/main/default/objects/Payment__c/fields/Third_Participant__c.field-meta.xml
<CustomField>
    <fullName>Third_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Third Participant)</relationshipLabel>
    <relationshipName>Payments3</relationshipName>
    <type>Lookup</type>
</CustomField>