force-app/main/default/objects/Payment__c/fields/Transaction_Fees__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fees__c</fullName>
    <label>Transaction Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>