force-app/main/default/objects/Payment__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <description>Payment reference number from the payment gateway</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>