force-app/main/default/objects/Payment__c/validationRules/Cancellation_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Invalid</fullName>
    <active>true</active>
    <description>Used to validate Payment Gateway Responses</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c,&quot;Cancelled&quot;)), NOT(ISBLANK( Cancellation_Date__c )))</errorConditionFormula>
    <errorMessage>Cancellation Date can only be set when the status of the Payment is cancelled</errorMessage>
</ValidationRule>