force-app/main/default/objects/Payment__c/validationRules/Cancellation_Reason_when_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_when_Cancelled</fullName>
    <active>true</active>
    <description>VHF-2975</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Cancelled&quot;), 
    OR(ISBLANK(TEXT(Cancellation_Reason__c)), 
        ISBLANK(Cancellation_Comments__c)),
       NOT(ISPICKVAL(PRIORVALUE( Status__c ), &apos;Request Expired&apos;)),
       NOT(ISPICKVAL(PRIORVALUE( Status__c ), &apos;Payment Received&apos;))
     )</errorConditionFormula>
    <errorMessage>Please enter Cancellation Reason and Cancellation Comments!</errorMessage>
</ValidationRule>