force-app/main/default/objects/Payment__c/validationRules/Do_not_allowing_creating_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allowing_creating_records</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ByPassValidation__c ),  NOT($Profile.Name = &quot;System Administrator&quot;), ISNEW() )</errorConditionFormula>
    <errorMessage>Sorry, You cannot create a new payment record manually.</errorMessage>
</ValidationRule>