force-app/main/default/objects/Payment__c/validationRules/Lock_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Payment</fullName>
    <active>true</active>
    <description>Payment is locked when cancelled, expired or received, except for when Cancellation Date is being set when it was already cancelled</description>
    <errorConditionFormula>AND(
  NOT(ISCHANGED(ByPassValidation__c)),
  OR(
     AND(ISPICKVAL(PRIORVALUE( Status__c ), &apos;Cancelled&apos;), 
     NOT(ISCHANGED( Cancellation_Date__c))),
     ISPICKVAL(PRIORVALUE( Status__c ), &apos;Request Expired&apos;),
     ISPICKVAL(PRIORVALUE( Status__c ), &apos;Payment Received&apos;)
    )
   )</errorConditionFormula>
    <errorMessage>Record is locked from editing</errorMessage>
</ValidationRule>