force-app/main/default/objects/Payment__c/validationRules/Payment_Received_Fields_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Received_Fields_Blank</fullName>
    <active>true</active>
    <description>Used to validate Payment Gateway Responses</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Payment Received&quot;), OR(ISBLANK(Received_Date__c), ISBLANK(Transaction_Number__c), ISBLANK(Payment_Method__c), ISBLANK(Amount_Received__c)))</errorConditionFormula>
    <errorMessage>When Payment is received, the Received Date, Transaction Number, Payment Method, and Amount Received fields must be populated</errorMessage>
</ValidationRule>