force-app/main/default/objects/Payment__c/validationRules/Payment_Registered_Fields_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Registered_Fields_Blank</fullName>
    <active>true</active>
    <description>Used to validate Payment Gateway Responses</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Payment Registered&quot;), OR(ISBLANK(DemandID__c), ISBLANK(Payment_Link__c), ISBLANK( iCRN__c)))</errorConditionFormula>
    <errorMessage>When Payment is registered, the Demand ID, Payment Link, and iCRN fields must be populated</errorMessage>
</ValidationRule>