force-app/main/default/objects/Payment__c/validationRules/Prevent_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Owner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT($Profile.Name = &quot;System Administrator&quot;),  
ISCHANGED( OwnerId),
OR (
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Cancelled&apos;), ISPICKVAL(PRIORVALUE( Status__c ), &apos;Request Expired&apos;),
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Payment Received&apos;)
))</errorConditionFormula>
    <errorMessage>Sorry, you cannot change ownership of the record.</errorMessage>
</ValidationRule>