force-app/main/default/objects/Payment__c/validationRules/Validate_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Status_Update</fullName>
    <active>true</active>
    <description>Validate SRO Officer attempts to update record status</description>
    <errorConditionFormula>Not($Profile.Name = &quot;System Administrator&quot;) &amp;&amp;
NOT(ByPassValidation__c) &amp;&amp; 
ISCHANGED(Status__c) &amp;&amp;
( ISPICKVAL(Status__c, &apos;Created&apos;)|| ISPICKVAL(Status__c, &apos;Payment Registered&apos;)|| ISPICKVAL(Status__c, &apos;Payment Requested&apos;)|| ISPICKVAL(Status__c, &apos;Payment Received&apos;)||ISPICKVAL(Status__c, &apos;Request Expired&apos;) )</errorConditionFormula>
    <errorMessage>Invalid status update</errorMessage>
</ValidationRule>