force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>