force-app/main/default/objects/Payment__c/listViews/VHF_Voluntary_Payment_Payment.listView-meta.xml
<ListView>
    <fullName>VHF_Voluntary_Payment_Payment</fullName>
    <columns>NAME</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Case__c</columns>
    <filterScope>Queue</filterScope>
    <label>Voluntary Payment Queue</label>
    <queue>VHF_Voluntary_Payment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>